--- a/A-Movie-Recommendation-engine-system.ipynb
+++ b/A-Movie-Recommendation-engine-system.ipynb
@@ -1,30 +1,23 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🎬 Movie Recommendation System (Phase 4 Project)\n",
+    "# CineStream Movie Recommendation System (Phase 4 Project)\n",
     "\n",
-    "##  Introduction\n",
-    "This project focuses on building a **Movie Recommendation System** using the **MovieLens Latest-Small Dataset**.  \n",
-    "Our goal is to develop a machine learning model that generates **Top 5 personalized movie recommendations** for users based on their past ratings.\n",
+    "##  Overview\n",
+    "This project details the development of a sophisticated, personalized **Movie Recommendation System** for the fictional streaming platform **CineStream**. The central business challenge identified is **choice overload**, where an overwhelming content catalog leads to user session abandonment, negatively impacting watch time, customer loyalty, and platform growth. To mitigate this, the project's core objective was to design a machine learning solution that generates the **Top 5 most relevant movie recommendations** for every user.\n",
+    "The project rigorously follows the **CRISP-DM** framework, utilizing the **MovieLens Small Dataset (100k ratings)** for training and validation. The technical architecture is a **Hybrid Recommender System**. The primary component is **Collaborative Filtering** using **Matrix Factorization (SVD)**, which efficiently learns latent feature patterns from historical ratings to predict user enjoyment. This is strategically augmented with **Content-Based Filtering** (using TF-IDF on movie metadata) to improve recommendation explainability and mitigate the critical cold-start problem for new users and content.\n",
+    "Model performance is evaluated using a dual set of **KPIs: Model-Level** metrics like **RMSE** ensure prediction accuracy, while **Product-Level** metrics, including **Precision@5**, **Recall@5**, and **NDCG@5,** directly quantify the system's business effectiveness. The successful completion of this project demonstrates command of the full data science lifecycle and delivers a production-ready recommendation engine essential for boosting engagement and retention on the CineStream platform.\n",
     "\n",
-    "## 👥 Data Science Team (Group 4)\n",
+    "## Data Science Team (Group 4)\n",
     "- **Member 1:** *Diana Aloo*-Scrum Master  \n",
     "- **Member 2:** *Catherine Kaino*  \n",
     "- **Member 3:** *June Masolo*  \n",
     "- **Member 4:** *Joram Mugesa*  \n",
-    "- **Member 5:** *Edinah Ogoti*  \n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 📂 Dataset Used\n",
-    "**MovieLens Latest Small Dataset (ml-latest-small)**  \n",
-    "Source: https://files.grouplens.org/datasets/movielens/ml-latest-small.zip\n",
-    "\n",
-    "---\n",
-    "\n"
+    "- **Member 5:** *Edinah Ogoti*  \n"
    ]
   },
   {
@@ -36,8 +29,8 @@
     "## CRISP -DM\n",
     "\n",
     "## **1.1 Stakeholder & Project Context**\n",
-    "This project simulates a real-world scenario for a  **Data Science team** at a streaming service.  \n",
-    "The business needs a system that can intelligently recommend movies to users based on their past behavior in order to:  \n",
+    "This project simulates a real-world scenario for a  **Data Science team** at  CineStream streaming service.\n",
+    "CineStream needs a system that can intelligently recommend movies to users based on their past behavior in order to:  \n",
     "- Improve user experience  \n",
     "- Increase watch time  \n",
     "- Enhance customer loyalty  \n",
@@ -48,8 +41,7 @@
     "---\n",
     "\n",
     "## **1.2 Business Problem**\n",
-    "Users often leave the platform when they cannot quickly identify interesting movies.  \n",
-    "The business requires a **Top-5 Personalized Movie Recommendation System** that predicts what each user is likely to enjoy.\n",
+    "**CineStream** users often abandon their viewing session when they cannot quickly find interesting content, leading to reduced watch time and customer churn. The business requires a **Top-5 Personalized Movie Recommendation System** that predicts what each user is likely to enjoy.\n",
     "\n",
     "The model should:\n",
     "- Learn from historical ratings  \n",
@@ -121,20 +113,13 @@
     "This project demonstrates the **full data science lifecycle**: Crisp- DM\n",
     "**Business Understanding → Data Understanding → Data Preparation → Modelling → Evaluation → Deployment**.  \n",
     "\n",
-    "It also produces a realistic recommendation engine similar to what powers platforms like Netflix, Amazon Prime, Showmax, and YouTube.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "It also produces a realistic recommendation engine similar to what powers platforms like Netflix, Amazon Prime, Showmax, and YouTube.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "data_understanding = \"\"\"\n",
     "# **2. Data Understanding**\n",
     "\n",
     "## **2.1 Overview of the Dataset**\n",
@@ -3910,7 +3895,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3924,7 +3909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
